--- a/ExpensesControlApp/Views/ExpenseManager/Update.cshtml
+++ b/ExpensesControlApp/Views/ExpenseManager/Update.cshtml
@@ -17,7 +17,7 @@
                         <partial name="_ExpenseEntryVMInput" />
                     </div>
                     <div class="col">
-                        <input id="submit" type="submit" class="btn btn-outline-success m-2" value="Update" />
+                        <input type="submit" class="btn btn-outline-success m-2" value="Update" />
                         <a class="btn btn-outline-danger m-2" asp-action="Index">Cancel</a>
                     </div>
                 </div>
