--- a/ExpensesControlApp/Views/RegularExpense/Create.cshtml
+++ b/ExpensesControlApp/Views/RegularExpense/Create.cshtml
@@ -5,7 +5,7 @@
 
 @model ExpensesControlApp.ViewModels.RegularExpenseVM
 <div class="container col-10">
-    <form id="form" class="validate-form" method="post">
+    <form class="validate-form" method="post">
         <div class="border p-3 form-group">
             <div class="row">
                 <h2 class="text-black-50 pl-3">Add Regular Expense</h2>
@@ -14,16 +14,13 @@
                 <div class="d-flex flex-column align-items-center">
                     <div class="col my-2">
                         <partial name="_RegularExpenseVMInput" />
-                        
                     </div>
                     <div class="col">
-                        <input id="submit" type="submit" class="btn btn-outline-success m-2" asp-action="Create" value="Create" />
-
+                        <input type="submit" class="btn btn-outline-success m-2" asp-action="Create" value="Create" />
                         <a class="btn btn-outline-danger m-2" asp-action="Index">Cancel</a>
                     </div>
                 </div>
             </div>
-
         </div>
     </form>
 </div>
