--- a/ExpensesControlApp/Views/Limit/Index.cshtml
+++ b/ExpensesControlApp/Views/Limit/Index.cshtml
@@ -18,7 +18,7 @@
                             <div class="input-group-prepend w-25">
                                 <span class="input-group-text w-100" id="addon-amount">Amount</span>
                             </div>
-                            <input asp-for="Amount" name="Amount" class="form-control" aria-describedby="addon-amount">
+                            <input asp-for="Amount" name="Amount" class="form-control" aria-describedby="addon-amount" placeholder="1234,56">
                         </div>
                         <span asp-validation-for="Amount" class="text-danger"></span>
                         <label for="Amount" class="validation-error-message text-danger"></label>
